--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "waypoints": "^4.0.1",
+    "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
